cleaned up functions in util, created analysis documentation

--- a/Analysis/notebooks/PCA_oscillations_investigation.ipynb
+++ b/Analysis/notebooks/PCA_oscillations_investigation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,14 +338,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cdata_0819 = get_cdata(data_0819[187819:258785,:])\n",
-    "# eigen_values_0819, eigen_vectors_0819 = get_eigen_vectors(data_0819)\n",
+    "cdata_0819 = get_cdata(data_0819[187819:258785,:])\n",
+    "eigen_values_0819, eigen_vectors_0819 = get_eigen_vectors(data_0819)\n",
     "# projected_data_0819 = project_to_eigen_vectors(cdata_0819,2, eigen_values_0819, eigen_vectors_0819)\n",
     "# plot_data(projected_data_0819)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.20815439, 0.12871512, 0.07660112, 0.04011951, 0.03887129,\n",
+       "       0.0362837 , 0.0293359 , 0.02610542, 0.02309427, 0.01430177,\n",
+       "       0.01077971, 0.00095792, 0.00126424, 0.00683779, 0.00564003,\n",
+       "       0.00324119, 0.00405051, 0.00373437])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eigen_values_0819"
    ]
   },
   {
