PCA to room updates

--- a/Analysis/notebooks/analysis_documentation.ipynb
+++ b/Analysis/notebooks/analysis_documentation.ipynb
@@ -129,6 +129,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nov 2nd - 6th"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Updates:\n",
+    "1. Updated `strTime_to_unixTime`, now precision to seconds is supported"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
