added slice interval indices to Tools.py in Util

--- a/Analysis/notebooks/static_point_exp_1103.ipynb
+++ b/Analysis/notebooks/static_point_exp_1103.ipynb
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6df4857470>"
+       "<matplotlib.image.AxesImage at 0x7f65194011d0>"
       ]
      },
      "execution_count": 8,
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "4462"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -239,6 +239,285 @@
     "ax = fig.add_subplot(111)\n",
     "ax.scatter(projections[x:y,0], projections[x:y,1], c = np.arange(y-x), s = 0.1);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementing Iterative Approximation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.60444800e+09,            nan,            nan, ...,\n",
+       "                   nan,            nan,            nan],\n",
+       "       [1.60444800e+09,            nan,            nan, ...,\n",
+       "                   nan,            nan,            nan],\n",
+       "       [1.60444800e+09,            nan,            nan, ...,\n",
+       "                   nan,            nan,            nan],\n",
+       "       ...,\n",
+       "       [1.60444949e+09,            nan,            nan, ...,\n",
+       "                   nan,            nan,            nan],\n",
+       "       [1.60444949e+09,            nan,            nan, ...,\n",
+       "                   nan,            nan,            nan],\n",
+       "       [1.60444949e+09,            nan,            nan, ...,\n",
+       "                   nan,            nan,            nan]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We have our original data which is not mean centred yet in the matrix exp_data\n",
+    "\n",
+    "\n",
+    "exp_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we will extract only the part without the time.\n",
+    "\n",
+    "exp_data_no_time = exp_data[:,1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "       ...,\n",
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan],\n",
+       "       [nan, nan, nan, ..., nan, nan, nan]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp_data_no_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sorting eigenvectors\n",
+    "\n",
+    "eig_val_sorted_indices = np.argsort(eigen_values_0819)\n",
+    "eig_val_sorted_indices = eig_val_sorted_indices[-1::-1]\n",
+    "sorted_eigvec = eigen_vectors_0819[:,eig_val_sorted_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ardelalegre/.local/lib/python3.5/site-packages/ipykernel_launcher.py:10: RuntimeWarning: Mean of empty slice\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.27242989],\n",
+       "       [ 0.01447097],\n",
+       "       [-0.14871268],\n",
+       "       [-0.21514546],\n",
+       "       [ 0.22886427],\n",
+       "       [ 0.44173977],\n",
+       "       [-0.28123156],\n",
+       "       [ 0.4040974 ],\n",
+       "       [-0.11744631],\n",
+       "       [ 0.10989651],\n",
+       "       [-0.13787202],\n",
+       "       [ 0.11856753],\n",
+       "       [ 0.17732162],\n",
+       "       [ 0.18551822],\n",
+       "       [ 0.35886384],\n",
+       "       [ 0.02338102],\n",
+       "       [-0.07343548],\n",
+       "       [-0.41759072]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Can't take inverse of non square matrix\n",
+    "# modify our algorithm and take all the eigenvectors instead of just the first two\n",
+    "\n",
+    "\n",
+    "\n",
+    "M_all = sorted_eigvec[:,:].T\n",
+    "\n",
+    "# getting nan_mean\n",
+    "\n",
+    "s = np.nanmean(exp_data_no_time,axis = 0,keepdims = True)\n",
+    "s = s.T\n",
+    "\n",
+    "# taking just one sample,\n",
+    "one_ = exp_data_no_time[0,:]\n",
+    "\n",
+    "U = one_\n",
+    "U = U.reshape(18,1)\n",
+    "r = M_all@(np.nan_to_num(U-s))\n",
+    "\n",
+    "r # projection onto 18 sorted eigenvectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ardelalegre/.local/lib/python3.5/site-packages/ipykernel_launcher.py:12: RuntimeWarning: Mean of empty slice\n",
+      "  if sys.path[0] == '':\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.27242989],\n",
+       "       [ 0.01447097]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M = sorted_eigvec[:,:2].T\n",
+    "s = np.nanmean(exp_data_no_time,axis = 0,keepdims = True)\n",
+    "s = s.T\n",
+    "\n",
+    "one_ = exp_data_no_time[0,:]\n",
+    "\n",
+    "U = one_\n",
+    "\n",
+    "U = U.reshape(18,1)\n",
+    "\n",
+    "# the shape is correct\n",
+    "\n",
+    "r = M@(np.nan_to_num(U-s))\n",
+    "\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ardelalegre/.local/lib/python3.5/site-packages/ipykernel_launcher.py:11: RuntimeWarning: Mean of empty slice\n",
+      "  # This is added back by InteractiveShellApp.init_path()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.27242989],\n",
+       "       [ 0.01447097],\n",
+       "       [-0.14871268],\n",
+       "       [-0.21514546],\n",
+       "       [ 0.22886427],\n",
+       "       [ 0.44173977],\n",
+       "       [-0.28123156],\n",
+       "       [ 0.4040974 ],\n",
+       "       [-0.11744631],\n",
+       "       [ 0.10989651],\n",
+       "       [-0.13787202],\n",
+       "       [ 0.11856753],\n",
+       "       [ 0.17732162],\n",
+       "       [ 0.18551822],\n",
+       "       [ 0.35886384],\n",
+       "       [ 0.02338102],\n",
+       "       [-0.07343548],\n",
+       "       [-0.41759072]])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.50782531],\n",
+       "       [ 0.34704184],\n",
+       "       [ 0.70333263],\n",
+       "       [-0.03650531],\n",
+       "       [-0.23036209],\n",
+       "       [ 0.7389741 ],\n",
+       "       [ 0.497     ],\n",
+       "       [-0.118     ],\n",
+       "       [ 0.86      ],\n",
+       "       [ 0.634     ],\n",
+       "       [-0.539     ],\n",
+       "       [ 0.554     ],\n",
+       "       [        nan],\n",
+       "       [        nan],\n",
+       "       [        nan],\n",
+       "       [ 0.08745367],\n",
+       "       [ 0.29396372],\n",
+       "       [ 0.81769267]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
