added iterative approximation

--- a/Analysis/notebooks/old/Mapping raw measurements to PCA coordinates_removing_redundancy.ipynb
+++ b/Analysis/notebooks/old/Mapping raw measurements to PCA coordinates_removing_redundancy.ipynb
@@ -14,11 +14,8 @@
     "\n",
     "We want an affine transformation which can be described by a matrix and a shift vector.\n",
     "\n",
-    "$$\\vec{r} = \\vec{s} + M \\vec{U}$$ ( is this correct, or should it be,) - C\n",
+    "$$\\vec{r} = \\vec{s} + M \\vec{U}$$\n",
     "\n",
-    "$$\\vec{r} = M (\\vec{U} - \\vec{s})$$ - C\n",
-    "\n",
-    "(where s is the nan mean of the measurement matrix. r is the PCA space point. M is the PCA matrix. U is the measurement vector.) - C\n",
     "\n",
     "Here $M$ and $\\vec{s}$ are known. The unknowns are the last $m-k$ coordinates of $U$ and the vector $\\vec{r}$\n",
     "\n",
